# librefang

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  openapi.json
.github/scripts/: discussion-to-issue.sh
.github/workflows/: auto-close-resolved-issues.yml  build-timings.yml  cargo-deny.yml  ci.yml  coverage.yml  dashboard-build.yml  deploy-docs.yml  deploy-web.yml  deploy-worker.yml  devto-publish.yml  discussion-to-issue.yml  docker-build.yml  issue-labels.yml  issue-pr-link.yml  kernel-ignored-tests.yml  label-sync.yml  lighthouse.yml  mobile-smoke.yml  nix-build.yml  pr-status-labels.yml  release-cli.yml  release-create.yml  release-desktop.yml  release-notify.yml  release-npm-binaries.yml  release-tag.yml  release.yml  secret-scan.yml  stale-pr.yml  supply-chain-audit.yml  test-web.yml  todo-to-issue.yml  update-contributors.yml  weekly-report.yml
crates/librefang-api/: Cargo.toml
crates/librefang-channels/: AGENTS.md  Cargo.toml  README.md
crates/librefang-cli/: Cargo.toml
crates/librefang-desktop/: tauri.conf.json
crates/librefang-kernel/: Cargo.toml
crates/librefang-runtime-drivers/: Cargo.toml
crates/librefang-runtime-drivers/src/drivers/: anthropic.rs  chatgpt.rs  claude_code.rs  gemini.rs  gemini_cli.rs  mod.rs  openai.rs  token_rotation.rs  vertex_ai.rs
docs/: next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
i18n/: README.de.md  README.es.md  README.ja.md  README.ko.md  README.pl.md  README.zh.md
web/: package.json  pnpm-lock.yaml
(+311 files in other folders)
