[package]
name = "librefang-runtime-drivers"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LLM driver implementations for LibreFang runtime"

[dependencies]
librefang-types = { path = "../librefang-types" }
librefang-llm-driver = { path = "../librefang-llm-driver" }
librefang-http = { path = "../librefang-http" }
librefang-runtime-oauth = { path = "../librefang-runtime-oauth" }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
dashmap = { workspace = true }
regex-lite = { workspace = true }
url = { workspace = true }
tokio-stream = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
zeroize = { workspace = true }
rand = { workspace = true }
